--- a/slides.org
+++ b/slides.org
@@ -40,7 +40,8 @@
 #+BEAMER_HEADER: \newcommand{\colored}[2]{{\color{#1} #2}}
 
 #+BEAMER_HEADER: \usepackage[utf8]{inputenc}
-#+BEAMER_HEADER: \DeclareUnicodeCharacter{03BB}{$\lambda$}
+#+BEAMER_HEADER: \usepackage[libertine]{newtxmath}
+#+BEAMER_HEADER: \DeclareUnicodeCharacter{03BB}{${\lambda}$}
 #+BEAMER_HEADER: \usepackage{semantic}
 #+BEAMER_HEADER: \usepackage{stmaryrd}
 #+BEAMER_HEADER: \mathlig{=>}{\Rightarrow}
@@ -2017,7 +2018,12 @@ emptyEnv
     - each with type $T_i$ respectively
     - produces a result of type $S$
 - Functions can be defined, where their arguments /are function types!/
-
+*** First Class Functions
+- We say a language has /first class functions/ if functions are treated like any
+  other expression/value in a language
+  + We can construct them at any point, not just at the top level
+  + We can give them as arguments to functions
+  + We can return them as results of functions
 *** Example: Repeatedly apply a function
 #+name: applyNTimes
 #+begin_src racket
@@ -2123,7 +2129,7 @@ emptyEnv
 <<mapNum>>
 (define (addNToEach [numToAdd : Number]
                     [xs : (Listof Number)]) : (Listof Number)
-  (mapNum (lambda (x) (+ x numToAdd)) xs))
+  (mapNum (lambda(x) (+ x numToAdd)) xs))
 (addNToEach 3 '(1 2 3 4))
 #+end_src
 
@@ -2137,20 +2143,274 @@ emptyEnv
 *** Functions as return values
 - We can also make functions that produce other functions as a result
   + Just use ~lambda~ in the body of the function
+#+begin_src racket :noweb strip-export :exports both
+<<mapNum>>
+(define (makeAdderWith n) : (Number -> Number)
+  (lambda (x) (+ n x)))
+(makeAdderWith 3)
+(mapNum (makeAdderWith 3))
+#+end_src
+
+*** Combinators
+- Functions that take and return functions
+- Can "lift" operations to whole functions
+- Create a new function by specifying how it should behave on each input
+  + Lambda lets us refer to this variable
+#+begin_src racket :noweb strip-export :exports both
+<<mapNum>>
+(define (+fun [f : (Number -> Number)]
+              [g : (Number -> Number)]) : (Number -> Number)
+  (lambda (x) (+ (f x) (g x))))
+;; e.g. Make the function that computes
+#+end_src
+
+*** Example: Beyond Numbers
+#+begin_src racket :exports both
+(define (liftOption [f : (Number -> Number)])
+  : ((Optionof Number) -> (Optionof Number))
+  (lambda ([optionN : (Optionof Number)])
+    (type-case (Optionof Number) optionN
+      [(none) (none)]
+      [(some x) (some (f x))]
+      )))
+(define optionPlusOne (liftOption add1))
+(optionPlusOne (some 3))
+(optionPlusOne (none))
+#+end_src
+
+#+RESULTS:
+#+begin_src racket
+(some 4)
+(none)
+#+end_src
+
+* Polymorphic Higher-Order Functions
+:PROPERTIES:
+:EXPORT_FILE_NAME: pdf/slides011-map.pdf
+:header-args:racket: :results code :lang plait
+:END:
+#+beamer: \beamerdefaultoverlayspecification{<+->}
+** Highly Generic Programming
 *** Polymorphic Functions
 - Higher-order functions are even more powerful when combined with type variables
 - Allows us to say "This works on any type, as long as that type supports this kind of operation"
-Higher-order fun
-  ~(define (sort [xs : (Listof Number)]) : (Listof Number))~
+- Express ideas like "do this to every element in a list"
 *** Example: Sorting
 #+begin_src racket
 (define (sortNumbers [xs : (Listof Number)]) : (Listof Number)
   ....)
 
+;; These implementations are probably doing 99% the same thing
+;; except they're using different comparison operators
+(define (sortById [xs : (Listof (Number * String))])
+        : (Listof (Number * String))
+  ....)
 
-(define (sort [xs : (Listof Number)]) : (Listof Number)
+;; What we really want is this:
+(define (sortBy [xs : (Listof 'a)]
+                [compare : ('a 'a -> Boolean)])
+  : (Listof 'a)
   ....)
 #+end_src
+- Sort function that works on any type ~'a~
+  + So long as we have a comparison function ~compare~ that can find if one ~'a~ value is <= another
+*** Map
+- One of the most essential functions on list
+- For each element in the list, apply this function to each element
+  + Returns the resulting list, original list is unchanged
+- If your function takes in type ~'a~ and produces type ~'b~, then ~map~ can turn a ~(Listof 'a)~ into ~(Listof 'b)~
+#+begin_src racket
+(define (map [f : ('a -> 'b)]
+           [xs : (Listof 'a)]) : (Listof 'b)
+  (type-case (Listof 'a) xs
+             [empty
+               empty]
+             [(cons x rest)
+               (cons (f x)
+                     (map f rest))]))
+#+end_src
+*** Examples
+#+begin_src racket :exports both
+(map (lambda (x) (* x 1001)) '(1 2 3 4))
+(map not '(#t #f #f #t))
+(map some '("Hello" "Goodbye"))
+
+#+end_src
+
+#+RESULTS:
+#+begin_src racket
+'(1001 2002 3003 4004)
+'(#f #t #t #f)
+(list (some "Hello") (some "Goodbye"))
+#+end_src
+
+*** Map does recursion so you don't have to
+- Lots of times, we were writing code that looked exactly the same
+- Higher-order functions and polymorphism let you turn those patterns into an actual *function*
+
+
+*** Filter
+- Another common function on lists
+- Takes a *predicate* for some type:
+  + Look at two values and return either true or false
+  + Defines a property on that type
+- Returns a new list containing only the elements satisfying the predicate
+#+begin_src racket
+(define (filter [p : ('a 'a -> Boolean)]
+                [xs : (Listof 'a)]) : (Listof 'a)
+  (type-case (Listof 'a) xs
+             [empty
+               empty]
+             [(cons x rest)
+              ;; Check if the first element satisfies p
+              ;; If it does, include it in the results,
+              ;; otherwise omit
+               (if (p x)
+                   (cons x (filter p rest))
+                   (filter p rest))]))
+#+end_src
+
+*** Filter examples
+#+begin_src racket :exports both
+(filter (lambda (x) (zero? (modulo x 2)))
+        '(1 2 3 4 5 6))
+(filter some?
+        (list (none) (some "Hello") (none) (some "Goodbye")
+              (none) (none) (some "Cheers") (none)))
+(filter (lambda (x) (> x 1000000))
+        (list 1 2 3 4 (* 100000 100000)) )
+#+end_src
+
+
+*** Using Filter: The Functional Quicksort
+#+name: quicksort
+#+begin_src racket
+(define (sortBy [compare : ('a 'a -> Boolean)]
+                [xs : (Listof 'a)]) : (Listof 'a)
+  (type-case (Listof 'a) xs
+             [empty
+               empty]
+             [(cons first rest)
+               (let*
+                 ([smallers
+                    (filter (lambda (x) (compare x first))
+                            rest)]
+                  [biggers
+                    (filter (lambda (x) (not (compare x first)))
+                            rest)])
+                 (append (sortBy compare smallers)
+                         (cons first
+                               (sortBy compare biggers))))]))
+
+#+end_src
+
+*** How Quicksort works
+- An empty list is already sorted
+- If a list has at least one element, we can partition that list into everything smaller than that element, and greater than that element
+- We recursively sort those lists
+- This gives us 3 lists:
+  + A sorted list of things smaller than (or equal to) the head
+  + The head
+  + A sorted list of things greater than (or equal to) the head
+- If we append these together in that order, the result will still be sorted
+  + And contains everything from the original list
+
+*** Quicksort Examples
+#+begin_src racket :noweb strip-export :exports both
+<<quicksort>>
+(sortBy <= '(5 4 1 5 3 9 7))
+
+(sortBy (lambda (x y) (<= (fst x) (fst y)))
+      (list (pair 5 "a") (pair 4 "b") (pair 1 "c") (pair 9 "d")))
+
+(sortBy (lambda (s1 s2) (<= (string-length s1) (string-length s2)))
+        (list "goodbye" "hey" "hello" "a" "arithmetic" ))
+#+end_src
+
+#+RESULTS:
+#+begin_src racket
+'(1 3 4 5 5 7 9)
+(list (values 1 "c") (values 4 "b") (values 5 "a") (values 9 "d"))
+'("a" "hey" "hello" "goodbye" "arithmetic")
+#+end_src
+
+*** Polymorphic Combinators
+- Combinators that are polymorphic are highly general
+  + Ways to build new functions out of old functions
+- Often used to build up arguments to map or filter
+
+*** Function Composition
+- For any two functions, we can chain them together
+  + If their types agree
+#+name: comp
+#+begin_src racket
+;; Written that way to match the symbol in math
+(define (o [g : ('b -> 'c)]
+           [f : ('a -> 'b)]) : ('a -> 'c)
+  (lambda (x)
+    (g (f x))))
+;; (g (f x)) = ((o g f) x) for all x
+;; Arguments in that order so that this equation looks nice
+#+end_src
+
+*** Example
+#+begin_src racket :noweb strip-export :exports both
+<<comp>>
+(map (o (lambda (x) (* x 10)) add1)
+   '(1 2 3 4))
+
+(filter (o not empty?)
+        (list '() '(1 2) '(3 2 1) '() '(1)))
+#+end_src
+
+#+RESULTS:
+#+begin_src racket
+'(20 30 40 50)
+'((1 2) (3 2 1) (1))
+#+end_src
+- See type example on the board
+
+*** Partial Application
+- For functions that take multiple arguments, we can get a new function by providing only one argument
+  #+name: curry
+  #+begin_src racket
+  (define (curry [f : ('a 'b -> 'c)]
+                 [x : 'a])
+          : ('b -> 'c)
+    (lambda (y) (f x y)))
+  #+end_src
+
+- Can reverse order of arguments
+
+  #+name: flip
+  #+begin_src racket
+  (define (flip [f : ('a 'b -> 'c)])
+    : ('b 'a -> 'c)
+    (lambda (bVal aVal) (f aVal bVal)))
+
+  #+end_src
+
+*** Example
+#+begin_src racket :noweb strip-export :exports both
+<<curry>>
+<<flip>>
+;; Gets (modulo x 2) for each x in the list
+(map (curry (flip modulo) 2)
+     '(1 2 3 4 5 6 7 8))
+#+end_src
+
+#+RESULTS:
+#+begin_src racket
+'(1 0 1 0 1 0 1 0)
+#+end_src
+
+*** Point Free Programming
+- When you build functions using combinators instead of lambda, it's called
+  /point free programming/
+- Building programs becomes kind of like putting Lego together
+- Generally, don't want to always use point-free programming
+  + Sometimes the lambda is just clearer
+- But can be easier to read in many cases
 * Local Variables :noexport:
 Local Variables:
 org-latex-packages-alist: nil
